log
Wed, Mar 26, 2025  8:41:06 AM: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|5
total_score: 10/70
25021aa
Wed, Mar 26, 2025  8:43:23 AM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
57f9c78
Wed, Mar 26, 2025  8:43:55 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9c4abd8
Wed, Mar 26, 2025  8:44:04 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
6753032
Wed, Mar 26, 2025  8:44:34 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c34ec93
Wed, Mar 26, 2025  8:44:47 AM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
db2b052
Wed, Mar 26, 2025  8:46:41 AM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
f39a567
Wed, Mar 26, 2025  8:47:03 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
75d50a8
Wed, Mar 26, 2025  8:48:41 AM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:60:9: error: implicit declaration of function 'retun' [-Werror=implicit-function-declaration]
         retun NULL;
         ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
fceaf12
